--- a/index.html
+++ b/index.html
@@ -61,9 +61,26 @@
  </figure>
 
 		
-<p><a href="таблица.html" target="_blank">Таблица</a>
-<p><a href="запрос.html" target="_blank">Форма</a>
-<p><a href="паспорт2.html" target="_blank">Паспорт</a>
-<p><a href="задача.html" target="_blank">Задача</a>
-<p><a href="задача2.html" target="_blank">Форма задачи</a>
+<nav class="card-header">
+<ul class="nav nav-tabs card-header-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" href="таблица.html">Таблица</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="запрос.html">Форма</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="паспорт2.html">Паспорт</a>
+ 
+  <li class="nav-item">
+    <a class="nav-link active" href="задача.html">Задача</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" href="задача2.html">Форма задачи</a>
+  </li>
+  </ul>
+</nav>
+<p><figure align="center"><img src="99px_ru_wallpaper_361519_drakon_stoit_na_zdanii_posredi_srednevekovogo_goroda_v.jpg" height="400px" width="600px">
+ <figcaption><h5>Дракон над городом</figcaption>
+ </figure>	
 </body>
