--- a/запрос.html
+++ b/запрос.html
@@ -28,7 +28,7 @@
 <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
     <p>Оформить заказ:<input type="hidden"  name="q" value="search"></p>
     <p>Фамилия: <input type="Text" name="last_name" size=20  value="Мельникова"></p>
-	<p>Фамилия: <input type="Text" name="name" size=20  value="Даниела"></p>
+	<p>Имя: <input type="Text" name="name" size=20  value="Даниела"></p>
     <p>Возраст: <input type="Number" name="age" size=20 value="21"></p>
     <p>Место проживания:</p>
        <p> <input type="Radio" name="place" value="Moscow">Москва
