--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
 </head>
 
 <body>
-
+<div class="card ">	
+<nav class="card-header">
+<ul class="nav nav-tabs card-header-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" href="таблица.html">Таблица</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="запрос.html">Форма</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="паспорт2.html">Паспорт</a>
+ 
+  <li class="nav-item">
+    <a class="nav-link active" href="задача.html">Задача</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" href="задача2.html">Форма задачи</a>
+  </li>
+  </ul>
+</nav>
+</div>	
 <ul>
     <li><a href="file:///D:/%D1%83%D1%87%D0%B5%D0%B1%D0%B0/%D1%81%D0%B0%D0%B9%D1%82/1-5.html" target="_self">Начальная(текущая)страница сайта</a>
     <li><a href="file:///D:/%D1%83%D1%87%D0%B5%D0%B1%D0%B0/%D1%81%D0%B0%D0%B9%D1%82/1-5.html#head1" target="_self">Страница с переходом на закладку</a>
@@ -57,25 +77,7 @@
 </ol></p>
 <a href="#top" target="_self">К оглавлению</a>	
 	
-<nav class="card-header">
-<ul class="nav nav-tabs card-header-tabs">
-  <li class="nav-item">
-    <a class="nav-link active" href="таблица.html">Таблица</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="запрос.html">Форма</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="паспорт2.html">Паспорт</a>
- 
-  <li class="nav-item">
-    <a class="nav-link active" href="задача.html">Задача</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" href="задача2.html">Форма задачи</a>
-  </li>
-  </ul>
-</nav>
+	
 <p><figure align="center"><img src="99px_ru_wallpaper_361519_drakon_stoit_na_zdanii_posredi_srednevekovogo_goroda_v.jpg" height="400px" width="600px">
  
 	<figcaption><h5>Дракон над городом</figcaption>
