--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <a href="#top" target="_self">К оглавлению</a>	
 	
 	
-<p><figure align="center"><img src="99px_ru_wallpaper_361519_drakon_stoit_na_zdanii_posredi_srednevekovogo_goroda_v.jpg" height="400px" width="600px">
+<p><figure align="center"><img src="99px_ru_wallpaper_361519_drakon_stoit_na_zdanii_posredi_srednevekovogo_goroda_v.jpg" height="400px" width="600px" title="Дракон">
  
 	<figcaption><h5>Дракон над городом</figcaption>
  </figure>	
